# src/api/routes.go
@@ -61,6 +61,11 @@ func InitRoutes(useLogger bool, handler *PcApi) *gin.Engine {
 	r.DELETE("/process/logs/:name", handler.TruncateProcessLogs)
 	r.PATCH("/process/stop/:name", handler.StopProcess)
 	r.PATCH("/processes/stop", handler.StopProcesses)
+	r.PATCH("/namespace/stop/:name", handler.StopNamespace)
+	r.PATCH("/namespace/disable/:name", handler.DisableNamespace)
+	r.PATCH("/namespace/enable/:name", handler.EnableNamespace)
+	r.PUT("/processes", handler.UpdateProcesses)
+	r.DELETE("/namespace", handler.DeleteNamespace)
 	r.POST("/process/start/:name", handler.StartProcess)
 	r.POST("/process/restart/:name", handler.RestartProcess)
 	r.POST("/project/stop", handler.ShutDownProject)
